--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
             <p>7 éjszakánál hosszabb tartózkodás esetén kérje egyedi ajánlatunkat!</p>
         </div>
     <div class="szoveg1"><h2>Programajánló</h2></div>
-    <img src="kepek/kirandulas.gif" alt="kirándulás" height="150px" style="float: right;" class="kep">
+    <img src="kepek/kirandulas.gif" alt="kirándulás"class="kep">
+    <img class="kepekkirandulas">
         <div class="szamozottlista" style="float: left;">
         <ol>
             <li><a href="https://www.matraszentimre.hu/turaajanlatok/10-tura-a-felso-matraban" class="link"><u>10 túra a Felső-Mártában</u></a></li>
             <li><a href="https://kirandulastippek.hu/matra" class="link"><u>Kiándulástippek a Mátrában</u></a></li>
             <li><a href="https://adrenalin-park.hu/" class="link"><u>Adrenalin Park - Mátrafüred</u></a></li>
         </ol></div>
-        <footer><hr color="darkgreen" size="5px" width="80%"></footer>
+        <footer class="valami"><hr></footer>
 </body>
 </html>
