--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width-=device-width, initial scale 1.0">
     <title>Kiadó Nyaraló a Mártában</title>
     <link rel="stylesheet" href="stilus.css">
-    <link rel="icon" href="favicon.png" sizes="16x16">
+    <link rel="icon" href="kepek/fav.png" sizes="16x16">
 </head>
 <body>
     <div class="cim"><h1>Kiadó Nyaraló a Mátrában!</h1></div>
@@ -86,7 +86,7 @@
             <p>7 éjszakánál hosszabb tartózkodás esetén kérje egyedi ajánlatunkat!</p>
         </div>
     <div class="szoveg1"><h2>Programajánló</h2></div>
-    <img src="kepek/kirandulas.gif" alt="kirándulás" class="kep">
+    <img src="kepek/kirandulas.gif" alt="kirándulás"class="kep">
         <div class="szamozottlista" style="float: left;">
         <ol>
             <li><a href="https://www.matraszentimre.hu/turaajanlatok/10-tura-a-felso-matraban" class="link"><u>10 túra a Felső-Mártában</u></a></li>
