--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="cim"><h1>Kiadó Nyaraló a Mátrában!</h1></div>
     <div class="szoveg1"><h2>Jellemzők: </h2></div>
     <div class="felsorolas">
-    
-        <p>
+    <p>
         <ul>
             <li>350 négyszögöles parkosított kert</li>
             <li>téglaéptésű ház</li>
@@ -22,7 +21,8 @@
             <li>nappali, étkező, konyha, fürdőszoba</li>
             <li>kocsibeálló négy autó részére</li>
         </ul>
-    </p></div>
+    </p>
+    </div>
     <div class="szoveg1"><h2>
         Telefon: +36 10 11-22-333
         E-mail: <a href="kiado@matrai-haz.hu" class="link"><u>kiado@matrai-haz.hu</u></a>
